Added mobile navbar

--- a/style.css
+++ b/style.css
@@ -34,13 +34,8 @@ h2 {
 }
 
 #logo {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-#logo img {
-  margin-left: -50px;
+  width: 300px;
+  margin-left: -60px;
 }
 
 #headline img {
@@ -191,5 +186,15 @@ h2 {
 .interested-section {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.nav-item a {
+  font-weight: 700;
+  color: #011627;
+}
+
+.navbar-nav {
+  display: flex;
   align-items: center;
 }
