--- a/style.css
+++ b/style.css
@@ -60,16 +60,9 @@ h2 {
   margin-left: 10px;
 }
 
-.headline-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
 .default-button {
   color: white;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
-  font-family: Montserrat;
   font-size: 16px;
   background-color: #18efac;
   border-radius: 4px;
@@ -78,6 +71,7 @@ h2 {
   width: auto;
   height: 48px;
   font-weight: 700;
+  padding: 0 20px;
 }
 
 .action-button {
@@ -92,6 +86,7 @@ h2 {
   width: auto;
   height: 48px;
   font-weight: 700;
+  padding: 0 20px;
 }
 
 /* Browser mockup code
@@ -158,7 +153,7 @@ h2 {
 .browser-mockup textarea {
   height: 240px;
   resize: unset;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .step {
@@ -177,10 +172,7 @@ h2 {
 
 .price-box-container {
   text-align: center;
-}
-
-.price-section {
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .interested-section {
@@ -197,4 +189,76 @@ h2 {
 .navbar-nav {
   display: flex;
   align-items: center;
+}
+
+#headline .cta-button {
+  margin: 20px 0;
+}
+
+.content-section {
+  padding: 50px 0;
+}
+
+.nav-item {
+  margin-left: 20px;
+}
+
+.f-center {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  height: 100%;
+  justify-content: center;
+}
+
+.bullet {
+  width: 50px;
+  height: 50px;
+  background-color: #18efac;
+  border-radius: 100%;
+  color: white;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
+  font-size: 16px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.bullet span {
+  font-weight: 700;
+}
+
+.text-row {
+  display: flex;
+}
+
+.text-row h3 {
+  line-height: 50px;
+  margin-left: 10px;
+}
+
+.mini-logo {
+  width: 20px;
+}
+
+.report-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.clickbuster {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: transparent;
+}
+
+.pointer {
+  position: absolute;
+  color: black;
+  top: 92%;
+  left: 27%;
 }
