--- a/style.css
+++ b/style.css
@@ -284,6 +284,11 @@ h2 {
   #headline {
     text-align: center;
   }
+
+  .cta-button {
+    padding: 10px;
+    height: auto;
+  }
 }
 
 @media only screen and (min-width: 992px) {
